--- a/main.html
+++ b/main.html
@@ -10,6 +10,39 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1>"3 random videos"</h1>
+	<nav>
+		<ul>
+			<li>
+				<a href="#">Home</a>
+			</li>
+		</ul>
+		<ul>
+			<li>
+				<a href="#">About us</a>
+			</li>
+		</ul>
+		<ul>
+			<li>
+				<a href="#">Contact us</a>
+			</li>
+		</ul>
+	</nav>
+	<video width="400px" controls>
+		<source
+			src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"/>
+	</video>
+		
+	<video width="400px" controls>
+		<source
+			src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"/>
+	</video>
+			
+	<video width="400px" controls>
+		<source
+			src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"/>
+	</video>
+	
 
 </body>
 
